<resources>
    <string name="app_name">Monitor</string>
    <string name="homeLocation">get location</string>
    <string name="refreshData">Refresh [nOK]</string>
    <string name="dataType1">Temperature</string>
    <string name="dataType2">Humidity (empty)</string>
    <string name="firstHeader">Location</string>
    <string name="describeFAB">dummy add value</string>
    <string name="variableLocation">Var. Location</string>
    <string name="unit_name">Degrees</string>
    <string name="secondHeader">Units</string>
    <string name="unitSelection">unit selection</string>
    <string name="dropDownTitle">Selected Parameter</string>
    <string name="getSensorReading">Sensor query</string>
    <string name="current_sensor_reading">N/A</string>
    <string name="sensorReadingTimestamp">N/A</string>
    <string name="sensorReadingHeader1">Timestamp</string>
    <string name="sensorReadingHeader2">N/A</string>
    <string name="deviceButton">device</string>
    <string name="dropDownDeviceSelection">Selected Device</string>
    <string name="navigateToSensors">go to sensors</string>
    <string name="navigateToDevices">go to devices</string>
    <string name="outputSeekBarTitle">Light intensity</string>
    <string name="switchTitle">Toggle on/off</string>
    <string name="switch1">12h forecast</string>
    <string name="switch2">1h forecast</string>
    <string name="switch3">1h sensor</string>
    <string name="LED_LDR_switch">LDR sensor dependence</string>
    <string name="location">Default</string>
    <string name="locationDisplay">Belgrade</string>
    <string name="sensorStatusHeader">Status</string>
    <string name="deviceStatusHeader">Device status</string>
    <string name="deviceStatusButton">Device status</string>
    <string-array name="monitoring_parameters">
        <item>Temperature</item>
        <item>Humidity</item>
    </string-array>
    <string-array name="monitoring_devices">
        <item>LED Light</item>
        <item>Placeholder 1</item>
        <item>Placeholder 2</item>
    </string-array>
</resources>